--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="header">
+        <div class="header__titlewrapper">
+            <img src="./pics/logo.PNG" alt="Logo" class="header__logo">
+            <h1 class="header__title">Ihre Innenarchitekten für Klang und Bild mit 24// Aftersale Service</h1>
+        </div>
+        <div class="header__picwrapper">
+            <img src="./pics/header.PNG" alt="Wohnzimmer" class="header__pic">
+        </div>
+        <h2 class="header__descriptiontitle">Wellness für ihre Augen und Ohren</h2>
+        <p class="header__description">
+            Ein Home Entertainment System ist eine Investition, die Ihnen jahrelang Freude bereiten soll. Bei der Beratung berücksichtigen wir deshalb nebst Ihren individuellen Bedürfnissen auch Ihre Wohnsituation und kreieren massgeschneiderte Lösungen nach Ihrem Geschmack. Dabei arbeiten wir mit hochwertigen Marken wie zum Beispiel Loewe, Bang & Olufsen, Revox, Sonos, Bose NADE oder Marantz. Interessieren Sie sich für deren Design oder möchten Sie sich inspirieren lassen? Besuchen Sie unseren Showroom in Wohlen. Übrigens: Wir sind auch Jahre nach dem Kauf 24 Stunden am Tag für Sie da.
+        </p>
+    </header>
     
 </body>
 </html>
