--- a/index.html
+++ b/index.html
@@ -24,6 +24,58 @@
             Ein Home Entertainment System ist eine Investition, die Ihnen jahrelang Freude bereiten soll. Bei der Beratung berücksichtigen wir deshalb nebst Ihren individuellen Bedürfnissen auch Ihre Wohnsituation und kreieren massgeschneiderte Lösungen nach Ihrem Geschmack. Dabei arbeiten wir mit hochwertigen Marken wie zum Beispiel Loewe, Bang & Olufsen, Revox, Sonos, Bose NADE oder Marantz. Interessieren Sie sich für deren Design oder möchten Sie sich inspirieren lassen? Besuchen Sie unseren Showroom in Wohlen. Übrigens: Wir sind auch Jahre nach dem Kauf 24 Stunden am Tag für Sie da.
         </p>
     </header>
+
+    <main>
+        <section class="section">
+            <div class="section__picwrapper">
+                <img src="./pics/sec1.PNG" alt="Fernseher" class="section__pic">
+            </div>
+            <div class="section__textwrapper">
+                <h3 class="section__title">Multiroom Systeme</h3>
+                <p class="section__text">
+                    Ihr Leben spielt sich in mehreren Räumen ab. Ihre Musik sollte das auch. Ausgeklügelte Multiroom Systeme sorgen für ein hochwertiges Klangerlebnis in Ihrem ganzen Zuhause, inklusive Garten oder Terrasse. Dank unserer grossen Auswahl finden Sie garantiert eine Anlage, die Ihrem Einrichtungsstil entspricht - ganz egal ob Sie es klassisch, modern, minimalistisch oder zurückhaltend mögen. Sämltliche unserer Multiroom Systems sind leicht zu bedienen und zeichnen sich durch hervorragende Sound-Qualität aus. Für welches entscheiden Sie sich.
+                </p>
+            </div>
+        </section>
+        <section class="section">
+            <div class="section__picwrapper">
+                <img src="./pics/sec2.PNG" alt="Sofa" class="section__pic">
+            </div>
+            <div class="section__textwrapper">
+                <h3 class="section__title">Audiosysteme / HIFI</h3>
+                <p class="section__text">
+                    Jede Anlage hat ihre eigenen Eigenschaften und Vorzüge. Für nicht-Profis sind diese nicht immer leicht zu erkennen. Deshalb immer an Ihrer Seite: Unsere kompetenten Berater. Sie hören Ihnen aufmerksam zu, übersetzen Ihre Bedürfnisse in ein ausgeklügeltes Klang-Konzept und empfehlen ausgewählte Stereo-Anlagen, die selbst höchsten Sound- und Design-Anforderungen gerecht werde - darunter solche von Revox, NAD, T+A oder Sonos.
+                </p>
+            </div>
+        </section>
+        <section class="section">
+            <div class="section__picwrapper">
+                <img src="./pics/sec3.PNG" alt="Fernseher" class="section__pic">
+            </div>
+            <div class="section__textwrapper">
+                <h3 class="section__title">Heimkino und Game Center</h3>
+                <p class="section__text">
+                    Dank gestochen scharfen Bildern und einer unvergleichbaren Soundqualität erleben Sie Filme und Videospiele intensiver denn je zuvor - und das von Zuhause aus. Mit unseren qualitativ hochwertigen Markengeräten und -zubehör, zum Beispiel von Bang & Olufsen, Bose oder Marantz, investieren Sie in ein Heimkino oder Game center, das Ihnen langfristig Freude bereitet.
+                </p>
+            </div>
+        </section>
+        <section class="section">
+            <div class="section__picwrapper">
+                <img src="./pics/sec4.PNG" alt="Fernseher" class="section__pic">
+            </div>
+            <div class="section__textwrapper">
+                <h3 class="section__title">Schöner Wohnen</h3>
+                <p class="section__text">
+                    Lassen Sie Ihre Multimedia-Anlage als Design-Objekt für sich sprechen oder entscheiden Sie sich für eine dezente Variante, die sich nahtlos in Ihr stilvoll eingerichtetes Zuahuse einfügt. In unserem Showroom finden Sie eine grosse Auswahl an Multimediamöbeln und Integrationslösungen für Unterhaltungselektronik, die selbst höchsten ästhetischen Ansprüchen genügen.
+                </p>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
