rating carousel hinzügefügt. carousel hat noch keine funktion

--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
             </div>
         </section>
 
+        <div class="rating">
+            <h4 class="rating__text">
+                Beste Beratung. Ich bin mit der Home Cinema installation sehr zufrieden. Werde glatte 5 Sterne bei Google abgeben.
+            </h4>
+            <h5 class="rating__person">Max Mustermann</h5>
+            <hr class="rating__hr">
+            <div class="rating__navwrapper">
+                <span class="rating__left"></span>
+                <div class="rating__counter">
+                    <button class="rating__left"><</button>
+                    <span class="rating__current">1</span>/<span class="rating__total">3</span>
+                    <button class="rating__right">></button>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer>
