work section hinzugefügt

--- a/index.html
+++ b/index.html
@@ -87,6 +87,43 @@
             </div>
         </div>
 
+        <section class="work">
+            <div class="work__wrapper">
+                <div class="work__picwrapper">
+                    <img src="./pics/work1.PNG" alt="Zwei Personen beraten sich" class="work__pic">
+                </div>
+                <div class="work__textwrapper">
+                    <h3 class="work__title">Beratung und Planung</h3>
+                    <p class="work__text">
+                        Die perfekte Anlage beginnt mit einer kompetenten Planung und fundierten Beratung. Wir berücksichtigen dabei Ihre Nutzungsverhalten, die Akustik Ihrer Wohnräume und Ihren persönlichen Stil - damit Sie die Anlage erhalten, die wirklich zu Ihnen passt. Darüber hinaus sind wir Ihre ersten Anspechpartner für Themen wie Empfangssysteme, Leerverrohrungen für Antennen, Steuersysteme oder Anbindung an Hausautomationssysteme.
+                    </p>
+                </div>
+            </div>
+            <div class="work__wrapper">
+                <div class="work__picwrapper">
+                    <img src="./pics/work2.PNG" alt="Zwei Personen beraten sich" class="work__pic">
+                </div>
+                <div class="work__textwrapper">
+                    <h3 class="work__title">Installation</h3>
+                    <p class="work__text">
+                        Wir machen die Arbeit, damit Sie das Vergnügen haben. Unsere gut ausgebildeten Installationstechniker liefern und installieren Ihre Unterhaltungselektronik fachgerecht - vom ersten Kabeleinzug, über die Montage von Stecker und Steckdosen bis hin zum programmieren des Systems.
+                    </p>
+                </div>
+            </div>
+            <div class="work__wrapper">
+                <div class="work__picwrapper">
+                    <img src="./pics/work3.PNG" alt="Zwei Personen beraten sich" class="work__pic">
+                </div>
+                <div class="work__textwrapper">
+                    <h3 class="work__title">Aftersales Service</h3>
+                    <p class="work__text">
+                        Unsere Service-Spezialisten kümmern sich rund um die Uhr um Ihre Anliegen und sind innerhalb von 24 Stunden bei Ihnen vor Ort. Die meisten Geräte können wir in unserer top ausgestatteten Servicewerkstatt rasch wieder instand setzen. Falls es doch einmal länger dauern sollte, stellen wir Ihnen gerne ein Ersatzgerät zur Verfügung.
+                    </p>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
     <footer>
