impression carousel hinzugefügt. carousel hat noch keine funktion

--- a/index.html
+++ b/index.html
@@ -121,8 +121,22 @@
                     </p>
                 </div>
             </div>
-
         </section>
+
+        <div class="impression">
+            <h3 class="impression__title">Beratungstermin vereinbaren</h3>
+            <div class="impression__carousel">
+                <img src="./pics/slide1.PNG" alt="Fernseher" class="impression__pic">
+                <div class="impression__navwrapper">
+                    <span class="impression__left"></span>
+                    <div class="impression__counter">
+                        <button class="impression__left"><</button>
+                        <span class="impression__current">1</span>/<span class="impression__total">3</span>
+                        <button class="impression__right">></button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
