brand section hinzugefügt

--- a/index.html
+++ b/index.html
@@ -155,6 +155,32 @@
             </div>
         </section>
 
+        <section class="brand">
+            <h3 class="brand__title">Unsere Marken</h3>
+            <div class="brand__picwrapper">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+                <img src="./pics/marken.PNG" alt="Markenlogo" class="brand__pic">
+            </div>
+        </section>
+
     </main>
 
     <footer>
