footer hinzugefügt und html inhalt vollendet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tschachtli AG</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -183,8 +184,35 @@
 
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <div class="footer__contactwrapper">
+            <h4 class="footer__title">Kontakt</h4>
+            <p class="footer__bold"><b>Tschachtli AG</b></p>
+            <p class="footer__underline">Breitistrasse 6</p>
+            <p class="footer__underline">5610 Wohlen</p>
+            <a href="mailto:verkauf@tschachtliag.ch" class="footer__link">verkauf@tschachtliag.ch</a>
+            <a href="tel:+56 622 68 66" class="footer__link">056 622 68 66</a>
+            <p class="footer__bold"><b>Hotline Pikett Dienst 24/7</b></p>
+            <a href="tel:+56 470 37 38" class="footer__link">056 470 37 38</a>
+            <a href="www.facebook.com" class="footer__facebook"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="footer__link">Für Geschäftskunden</a>
+        </div>
+        <div class="footer__openingwrapper">
+            <h4 class="footer__title">Öffnungszeiten Showroom</h4>
+            <p class="footer__bold"><b>Montag</b><br>Geschlossen</p>
+            <p class="footer__bold"><b>Dienstag bis Freitag</b><br>09:00 - 12:00 | 13:30 - 18:30</p>
+            <p class="footer__bold"><b>Samstag</b><br>08:30 - 16:00</p>
+            <p class="footer__text">
+                Auf Anfrage sind wir gerne auch ausserhalb der offiziellen Öffnungszeiten für Sie da. Setzen Sie sich mit uns in Verbindung und vereinbaren Sie einen Termin.
+            </p>
+        </div>
+        <div class="footer__infowrapper">
+            <div class="footer__copyright">
+                <p class="footer__info">&copy 2018 Tschachtli AG</p>
+                <a href="#" class="footer__info">Impressum & Datenschutz</a>
+            </div>
+            <p class="footer__info">Mady by allink</p>
+        </div>
     </footer>
     
 </body>
