header styling fertig

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header__titlewrapper">
             <img src="./pics/logo.PNG" alt="Logo" class="header__logo">
-            <h1 class="header__title">Ihre Innenarchitekten für Klang und Bild mit 24// Aftersale Service</h1>
+            <h1 class="header__title">Ihre Innenarchitekten für Klang und Bild mit 24/7 Aftersale Service</h1>
         </div>
         <div class="header__picwrapper">
             <img src="./pics/header.PNG" alt="Wohnzimmer" class="header__pic">
