styling für sections fertig

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
             </div>
         </section>
-        <section class="section">
+        <section class="section section--reverse">
             <div class="section__picwrapper">
                 <img src="./pics/sec2.PNG" alt="Sofa" class="section__pic">
             </div>
@@ -59,7 +59,7 @@
                 </p>
             </div>
         </section>
-        <section class="section">
+        <section class="section section--reverse">
             <div class="section__picwrapper">
                 <img src="./pics/sec4.PNG" alt="Fernseher" class="section__pic">
             </div>
