--- a/index.html
+++ b/index.html
@@ -76,16 +76,12 @@
                 Beste Beratung. Ich bin mit der Home Cinema installation sehr zufrieden. Werde glatte 5 Sterne bei Google abgeben.
             </h4>
             <h5 class="rating__person">Max Mustermann</h5>
-            <hr class="rating__hr">
-            <div class="rating__navwrapper">
-                <span class="rating__left"></span>
-                <div class="rating__counter">
-                    <button class="rating__left"><</button>
-                    <span class="rating__current">1</span>/<span class="rating__total">3</span>
-                    <button class="rating__right">></button>
-                </div>
+            <div class="rating__counter">
+                <button class="rating__btn"><</button>
+                <p class="rating__nums"><span class="rating__num rating__num--current">1</span>/<span class="rating__num rating__num--total">3</span></p>
+                <button class="rating__btn">></button>
             </div>
-        </div>
+    </div>
 
         <section class="work">
             <div class="work__wrapper">
