work styling fertig

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
             </h4>
             <h5 class="rating__person">Max Mustermann</h5>
             <div class="rating__counter">
-                <button class="rating__btn"><</button>
+                <button class="rating__btn rating__btn--left"><</button>
                 <p class="rating__nums"><span class="rating__num rating__num--current">1</span>/<span class="rating__num rating__num--total">3</span></p>
-                <button class="rating__btn">></button>
+                <button class="rating__btn rating__btn--right">></button>
             </div>
     </div>
 
         <section class="work">
-            <div class="work__wrapper">
+            <div class="work__wrapper work__wrapper--first">
                 <div class="work__picwrapper">
                     <img src="./pics/work1.PNG" alt="Zwei Personen beraten sich" class="work__pic">
                 </div>
