impression styling abgeschlossen

--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                 <div class="impression__navwrapper">
                     <span class="impression__left"></span>
                     <div class="impression__counter">
-                        <button class="impression__left"><</button>
-                        <span class="impression__current">1</span>/<span class="impression__total">3</span>
-                        <button class="impression__right">></button>
+                        <button class="impression__btn impression__btn--left"><</button>
+                        <p class="impression__nums"><span class="impression__num impression__num--current">1</span>/<span class="impression__num impression__num--total">3</span></p>
+                        <button class="impression__btn impression__btn--right">></button>
                     </div>
-                </div>
+                        </div>
             </div>
         </div>
 
