--- a/index.html
+++ b/index.html
@@ -135,19 +135,22 @@
         </div>
 
         <section class="contact">
-            <div class="contact__picwrapper">
+            <p class="contact__text contact__text--small">
+                Sind Sie auf der Suche nach dem perfekten Sound- oder Vision-System für Ihr Zuhause? Wir stehen Ihnen mit kompetenter Beratung und ausgeklügelten Lösungen beiseite. Vereinbaren Sie noch heute Ihren persönlichen Beratungstermin. wir freuen uns, Sie kennenzulernen.
+            </p>
+            <div class="contact__wrapper contact__wrapper--pic">
                 <img src="./pics/keusch.PNG" alt="Herr Bruno Keusch" class="contact__pic">
             </div>
-            <div class="contact__textwrapper">
-                <p class="contact__text">
+            <div class="contact__wrapper contact__wrapper--text">
+                <p class="contact__text contact__text--big">
                     Sind Sie auf der Suche nach dem perfekten Sound- oder Vision-System für Ihr Zuhause? Wir stehen Ihnen mit kompetenter Beratung und ausgeklügelten Lösungen beiseite. Vereinbaren Sie noch heute Ihren persönlichen Beratungstermin. wir freuen uns, Sie kennenzulernen.
                 </p>
-                <p class="contact__bold"><b>Bruno Keusch</b></p>
-                <p class="contact__jobtitle">Leitung Privatkunden</p>
-                <a href="mailto:brunokeusch@tschachtliag.ch" class="contact__link">brunokeusch@tschachtliag.ch</a>
-                <a href="tel:+41 56 622 68 66" class="contact__link">056 622 68 66</a>
-                <p class="contact__bold"><b>Hotline Pikett Dienst 24/7</b></p>
-                <a href="tel:+56 470 37 38" class="contact__link">056 470 37 38</a>
+                <p class="contact__text contact__text--padding"><b>Bruno Keusch</b></p>
+                <p class="contact__text contact__text--padding">Leitung Privatkunden</p>
+                <a href="mailto:brunokeusch@tschachtliag.ch" class="contact__text contact__text--padding">brunokeusch@tschachtliag.ch</a>
+                <a href="tel:+41 56 622 68 66" class="contact__text contact__text--padding">056 622 68 66</a>
+                <p class="contact__text contact__text--padding"><b>Hotline Pikett Dienst 24/7</b></p>
+                <a href="tel:+56 470 37 38" class="contact__text contact__text--padding">056 470 37 38</a>
             </div>
         </section>
 
